<resources>
    <string name="app_name">secondserve</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="filter_options">
        <item>nearest</item>
        <item>price</item>
    </string-array>
    <string name="filter_prompt">Filter by</string>
    <string name="error_cannot_get_restaurants">Couldn\'t get restaurants</string>
    <string name="restaurant_pickup_hours">Pickup Hours: %1$s - %2$s</string>
    <string name="saved_email_key">com.cs407.secondserve.email</string>
    <string name="saved_password_key">com.cs407.secondserve.password</string>
    <string name="back_arrow_description">Back Arrow</string>
    <string name="restaurant_pickup_label">Pickup</string>
    <string name="restaurant_page_available_time">Available from %1$s to %2$s</string>
    <string name="restaurant_location_label">Location</string>
    <string name="add_to_cart_button">Add to Cart</string>
    <string name="lock_icon_description">Lock Icon</string>
    <string name="filter_by_label">Filter by:</string>
    <string name="pickup_only">Pickup only</string>
    <string name="restaurant_bag_count">%1$d bags available</string>
    <string name="restaurant_bag_price">$%1$.2f</string>
    <string name="restaurant_earnings">$%1$.2f</string>
    <string name="restaurant_banner_content_description">Restaurant Banner</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="save_button">Save</string>
    <string name="agree_to_terms_of_service">I agree to the Terms of Service</string>
    <string name="scan_wiscard_button">Scan Wiscard</string>
    <string name="sign_up_label">Sign Up!</string>
    <string name="second_serve_logo_description">Second Serve logo</string>
    <string name="enter_location_label">Enter location:</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="customer_button">Customer</string>
    <string name="business_button">Business</string>
    <string name="get_started_title">Get Started</string>
    <string name="log_in_title">Log In</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="first_name_hint">First Name:</string>
    <string name="last_name_hint">Last Name:</string>
    <string name="confirm_password_label">Confirm Password:</string>
    <string name="full_name_label">Your Name:</string>
    <string name="enter_restaurant_name_hint">Enter restaurant name</string>
    <string name="pickup_start_time_hint">9:00 AM</string>
    <string name="pickup_end_time_hint">5:00 PM</string>
    <string name="pickup_hours_label">Pickup Hours:</string>
    <string name="restaurant_address_label">Address:</string>
    <string name="restaurant_name_label">Restaurant Name:</string>
    <string name="pickup_hours_unavailable">Pickup hours unavailable</string>
    <string name="location_unavailable">Location unavailable</string>
    <string name="restaurant_show_more_button">Show More</string>
    <string name="restaurant_distance_mi">%1$.1f mi away</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="bag_price">Enter Price of Bags</string>
    <string name="view_previous_orders">View Previous Orders</string>
    <string name="minus"> -</string>
    <string name="plus"> +</string>
    <string name="restaurant_update_information">Update information</string>
    <string name="restaurant_information">Restaurant information</string>
    <string name="bags_available_per_day">Bags available per day</string>
    <string name="price_per_bag">Price per bag</string>
    <string name="update_bag_price">Update bag price</string>
    <string name="orders_last_24_hours">Orders (last 24 hours)</string>
    <string name="earnings_last_24_hours">Earnings (last 24 hours)</string>
    <string name="total_orders">Total orders</string>
    <string name="total_earnings">Total earnings</string>
</resources>