<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/sign_up_label"
        android:textColor="@color/accent"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/first_name_hint"
        android:textColor="@color/accent"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/first_name_input"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/last_name_hint"
        android:textColor="@color/accent"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/email_input"
        android:text="@string/email_label"
        android:textColor="@color/accent"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/password_input"
        android:text="@string/password_label"
        android:textColor="@color/accent"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:inputType="textPassword"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/confirm_password_input"
        android:text="@string/confirm_password_label"
        android:textColor="@color/accent"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:inputType="textPassword"
        android:padding="10dp" />

    <CheckBox
        android:id="@+id/terms_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/agree_to_terms_of_service" />

    <Button
        android:id="@+id/scan_wiscard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:text="@string/scan_wiscard_button"
        android:textColor="@color/accent"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/accent"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/sign_up_button"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</LinearLayout>