<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"

tools:context=".MainActivity">


    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up_label"
        android:textColor="@color/accent"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/restaurant_full_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/full_name_label"
        android:textColor="@color/accent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTitle" />

    <EditText
        android:id="@+id/restaurant_first_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_GIVEN"
        android:background="@drawable/rounded_border"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_full_name_label"
        app:layout_constraintWidth_percent="0.45" />

    <EditText
        android:id="@+id/restaurant_last_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_FAMILY"
        android:background="@drawable/rounded_border"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/restaurant_first_name_input"
        app:layout_constraintTop_toBottomOf="@id/restaurant_full_name_label" />


    <TextView
        android:id="@+id/restaurant_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/restaurant_name_label"
        android:textColor="@color/accent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_password_input" />

    <TextView
        android:id="@+id/restaurant_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/email_label"
        android:textColor="@color/accent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_first_name_input" />

    <TextView
        android:id="@+id/restaurant_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/password_label"
        android:textColor="@color/accent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_email_input" />

    <EditText
        android:id="@+id/restaurant_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_restaurant_name_hint"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_name_label" />


    <EditText
        android:id="@+id/restaurant_email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_email_label" />

    <EditText
        android:id="@+id/restaurant_password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_password_label" />

    <TextView
        android:id="@+id/restaurant_address_label"
        android:layout_width="70dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/restaurant_address_label"
        android:textColor="@color/accent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_name_input" />

    <EditText
        android:id="@+id/restaurant_address_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="postalAddress"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_address_hint"
        android:inputType="textPostalAddress"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_address_label" />


    <TextView
        android:id="@+id/restaurant_pickup_hours_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/pickup_hours_label"
        android:textColor="@color/accent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_address_input" />

    <EditText
        android:id="@+id/restaurant_pickup_hours_start_time_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints="time"
        android:background="@drawable/rounded_border"
        android:hint="@string/pickup_start_time_hint"
        android:inputType="time"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_pickup_hours_label"
        app:layout_constraintWidth_percent="0.45" />

    <EditText
        android:id="@+id/restaurant_pickup_hours_end_time_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints="time"
        android:background="@drawable/rounded_border"
        android:hint="@string/pickup_end_time_hint"
        android:inputType="time"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/restaurant_pickup_hours_start_time_input"
        app:layout_constraintTop_toBottomOf="@id/restaurant_pickup_hours_label"
        app:layout_constraintWidth_percent="0.45" />


    <Button
        android:id="@+id/restaurant_sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/accent"
        android:padding="12dp"
        android:text="@string/sign_up_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_pickup_hours_end_time_input" />

</androidx.constraintlayout.widget.ConstraintLayout>