<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RestaurantSearchScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_tint"
    android:padding="4dp">


    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_arrow_description"
        android:padding="8dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:iconifiedByDefault="false"
        android:queryHint="Location..."
        app:layout_constraintEnd_toStartOf="@id/lockButton"
        app:layout_constraintStart_toEndOf="@id/back_arrow"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/lockButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/lock_icon_description"
        android:padding="8dp"
        android:src="@drawable/baseline_lock_outline_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/user_location_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="#F0F0F0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_arrow" />


    <TextView
        android:id="@+id/filterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/filter_by_label"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_location_text" />


    <Spinner
        android:id="@+id/filterSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/filter_options"
        android:prompt="@string/filter_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/filterLabel"
        app:layout_constraintTop_toBottomOf="@id/user_location_text" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurantRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@id/view_previous_orders_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterSpinner" />


    <TextView
        android:id="@+id/pickupOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_only"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/view_previous_orders_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_previous_orders"
        android:textAllCaps="false"
        android:backgroundTint="@color/accent"
        android:textColor="@android:color/white"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


